<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="pw.janyo.whatanime.handler.MainItemListener" />

        <variable
            name="animationDocs"
            type="pw.janyo.whatanime.model.Docs" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/textViewProbablyMistake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_probably_mistake"
                android:textColor="@color/mColorSecondary"
                android:textSize="@dimen/value_text_size"
                app:drawableStartCompat="@drawable/ic_probably_mistake"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewProbablyMistake">

                <TextView
                    android:id="@+id/textViewTitleNative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewTitleChinese"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewTitleChinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewTitleEnglish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitleNative" />

                <TextView
                    android:id="@+id/textViewTitleEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewTitleRomaji"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitleChinese" />

                <TextView
                    android:id="@+id/textViewTitleRomaji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitleEnglish" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->handler.click(animationDocs)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/nameLayout">

                <TextView
                    android:id="@+id/textViewTimeHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="top"
                    android:text="@string/hint_time"
                    android:textSize="@dimen/hint_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/textViewTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewTime" />

                <TextView
                    android:id="@+id/textViewEpisodeHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="top"
                    android:text="@string/hint_episode"
                    android:textSize="@dimen/hint_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/textViewEpisode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewEpisode" />

                <TextView
                    android:id="@+id/textViewAniListIdHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="top"
                    android:text="@string/hint_ani_list_id"
                    android:textSize="@dimen/hint_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/textViewAniListId"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewAniListId" />

                <TextView
                    android:id="@+id/textViewMalIdHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="top"
                    android:text="@string/hint_mal_id"
                    android:textSize="@dimen/hint_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/textViewMalId"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewMalId" />

                <TextView
                    android:id="@+id/textViewSimilarityHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="top"
                    android:text="@string/hint_similarity"
                    android:textSize="@dimen/hint_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/textViewSimilarity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewSimilarity" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="textViewAniListIdHint,textViewSimilarityHint,textViewMalIdHint,textViewEpisodeHint,textViewTimeHint" />

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewEpisode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewEpisode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{animationDocs.episode}"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewAniListId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/textViewTime" />

                <TextView
                    android:id="@+id/textViewAniListId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewMalId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/textViewEpisode" />

                <TextView
                    android:id="@+id/textViewMalId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/value_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewSimilarity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/textViewAniListId" />

                <TextView
                    android:id="@+id/textViewSimilarity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/value_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/textViewMalId" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>